--- a/src/assets/styles/slider.css
+++ b/src/assets/styles/slider.css
@@ -37,6 +37,7 @@
     outline: none;
     display: flex;
     width: 30px;
+    border-radius: 3px;
     height: 30px;
     margin-right: 15px;
     justify-content: center;
@@ -49,8 +50,9 @@
 
 .buttonContainer button svg {
     fill: #fff;
-    width: 20px;
-    height: 30px;
+    stroke-width: 2px;
+    width: 16px;
+    height: 16px;
     -webkit-transition: opacity 0.7s ease-in-out;
     -o-transition: opacity 0.7s ease-in-out;
     transition: opacity 0.7s ease-in-out;
@@ -99,27 +101,6 @@ img {
 .slider {
     overflow: hidden;
     display: block;
-}
-
-.slider .playPauseBtn svg {
-    fill: #000;
-    height: var(--buttonHeight);
-    width: auto;
-    -webkit-transition: opacity 0.7s ease-in-out;
-    -o-transition: opacity 0.7s ease-in-out;
-    transition: opacity 0.7s ease-in-out;
-    display: block;
-    margin: 0 auto;
-}
-
-.slider .playPauseBtn {
-    border: none;
-    outline: none;
-    padding: 0;
-    background-color: transparent;
-    -webkit-transition: opacity 0.7s ease-in-out;
-    -o-transition: opacity 0.7s ease-in-out;
-    transition: opacity 0.7s ease-in-out;
 }
 
 button {
